# pipelines

./: CMakeLists.txt  README.md  build.yml  ccache.yml  clcache.yml  code_quality_checks.yml  deploy.yml  documentation.yml  make.sh  package-build.yml  pipelines-developer.yml  stages.yml  test.cpp
.azure-pipelines/: main.yml  pr_and_main.yml  pull_request.yml
cmake/: GTest.cmake  GTest.in
conda/: bld.bat  build.sh  meta.yaml
docs/: build_docs.py  conf.py
lib/: CMakeLists.txt  test.cpp
pipelines/: build.yml  clcache.yml  deploy.yml  documentation.yml  package-build.yml  stages.yml
src/scippbuildtools/: tools.py
test/: CMakeLists.txt
test/.azure-pipelines/: main.yml  pull_request.yml  release.yml
test/cmake/: GTest.cmake
test/conda/: meta.yaml
test/tools/: make_and_install.sh
tools/: build_conda.py  build_cpp.py  cppcheck.Dockerfile  make_and_install.bat  make_and_install.sh  metatoenv.py
